--- a/android/app/src/main/res/layout/digital_clock_widget.xml
+++ b/android/app/src/main/res/layout/digital_clock_widget.xml
@@ -26,6 +26,7 @@
             android:gravity="center"
             android:includeFontPadding="false"
             android:maxLines="1"
+            android:textColor="@android:color/white"
             android:shadowColor="@android:color/black"
             android:shadowDy="1"
             android:shadowRadius="1"
@@ -44,6 +45,7 @@
             android:gravity="center"
             android:includeFontPadding="false"
             android:maxLines="1"
+            android:textColor="@android:color/white"
             android:shadowColor="@android:color/black"
             android:shadowDy="1"
             android:shadowRadius="1"
