--- a/android/app/src/main/res/layout/digital_clock_date_widget.xml
+++ b/android/app/src/main/res/layout/digital_clock_date_widget.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/widget_holder"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/widget_date_time_holder"
@@ -32,32 +32,14 @@
             android:shadowRadius="1"
             tools:text="00:00" />
 
-        <TextClock
-            android:id="@+id/widget_date"
+      
+        <RelativeLayout
+            android:id="@+id/widget_alarm_holder"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:autoSizeMinTextSize="2sp"
-            android:autoSizeStepGranularity="1sp"
-            android:autoSizeTextType="uniform"
-            android:format12Hour="EEE, d MMM"
-            android:format24Hour="EEE, d MMM"
-            android:gravity="center"
-            android:includeFontPadding="false"
-            android:maxLines="1"
-            android:textColor="@android:color/white"
-            android:shadowColor="@android:color/black"
-            android:shadowDy="1"
-            android:shadowRadius="1"
-            tools:text="Mon, 1 January" />
+            android:gravity="center_horizontal">
 
-        <!-- <RelativeLayout -->
-        <!--     android:id="@+id/widget_alarm_holder" -->
-        <!--     android:layout_width="match_parent" -->
-        <!--     android:layout_height="0dp" -->
-        <!--     android:layout_weight="1" -->
-        <!--     android:gravity="center_horizontal"> -->
-        <!---->
             <!-- <ImageView -->
             <!--     android:id="@+id/widget_next_alarm_image" -->
             <!--     android:layout_width="@dimen/widget_alarm_icon_size" -->
@@ -81,6 +63,6 @@
             <!--     android:textSize="@dimen/normal_text_size" -->
             <!--     tools:text="Tue, 18:30" /> -->
 
-        <!-- </RelativeLayout> -->
+        </RelativeLayout>
     </LinearLayout>
 </RelativeLayout>
