Fix compatibility of digital clock widget

--- a/android/app/src/main/res/layout/digital_clock_widget.xml
+++ b/android/app/src/main/res/layout/digital_clock_widget.xml
@@ -17,6 +17,7 @@
             android:id="@+id/widget_clock_100"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+      android:textSize="70sp" 
             android:autoSizeMaxTextSize="100sp"
             android:autoSizeMinTextSize="10sp"
             android:autoSizeStepGranularity="1sp"
@@ -38,6 +39,7 @@
             android:id="@+id/widget_clock_200"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+      android:textSize="70sp" 
             android:autoSizeMaxTextSize="100sp"
             android:autoSizeMinTextSize="10sp"
             android:autoSizeStepGranularity="1sp"
@@ -60,6 +62,7 @@
             android:id="@+id/widget_clock_300"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+      android:textSize="70sp" 
             android:autoSizeMaxTextSize="100sp"
             android:autoSizeMinTextSize="10sp"
             android:autoSizeStepGranularity="1sp"
@@ -82,6 +85,7 @@
             android:id="@+id/widget_clock_400"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+      android:textSize="70sp" 
             android:autoSizeMaxTextSize="100sp"
             android:autoSizeMinTextSize="10sp"
             android:autoSizeStepGranularity="1sp"
@@ -103,7 +107,8 @@
       <TextClock
             android:id="@+id/widget_clock_500"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+      android:layout_height="wrap_content"
+      android:textSize="70sp" 
             android:autoSizeMaxTextSize="100sp"
             android:autoSizeMinTextSize="10sp"
             android:autoSizeStepGranularity="1sp"
@@ -126,6 +131,7 @@
             android:id="@+id/widget_clock_600"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+      android:textSize="70sp" 
             android:autoSizeMaxTextSize="100sp"
             android:autoSizeMinTextSize="10sp"
             android:autoSizeStepGranularity="1sp"
@@ -148,6 +154,7 @@
             android:id="@+id/widget_clock_700"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+      android:textSize="70sp" 
             android:autoSizeMaxTextSize="100sp"
             android:autoSizeMinTextSize="10sp"
             android:autoSizeStepGranularity="1sp"
@@ -170,6 +177,7 @@
             android:id="@+id/widget_clock_800"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+      android:textSize="70sp" 
             android:autoSizeMaxTextSize="100sp"
             android:autoSizeMinTextSize="10sp"
             android:autoSizeStepGranularity="1sp"
@@ -193,6 +201,7 @@
             android:id="@+id/widget_clock_900"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+      android:textSize="70sp" 
             android:autoSizeMaxTextSize="100sp"
             android:autoSizeMinTextSize="10sp"
             android:autoSizeStepGranularity="1sp"
@@ -206,10 +215,9 @@
             android:shadowColor="@color/shadow"
             android:shadowDy="1"
             android:shadowRadius="1"
-      android:textFontWeight="900"
+           android:textFontWeight="900"
             android:visibility="gone"
-
-      tools:text="00:00" />
+            tools:text="00:00" />
 
 
 
@@ -219,7 +227,8 @@
             android:id="@+id/widget_date_100"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autoSizeMinTextSize="2sp"
+      android:textSize="15sp" 
+            android:autoSizeMinTextSize="5sp"
             android:autoSizeStepGranularity="1sp"
             android:autoSizeTextType="uniform"
             android:format12Hour="EEE, d MMM"
@@ -239,7 +248,9 @@
             android:id="@+id/widget_date_200"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autoSizeMinTextSize="2sp"
+ android:textSize="15sp" 
+            android:autoSizeMinTextSize="5sp"
+
             android:autoSizeStepGranularity="1sp"
             android:autoSizeTextType="uniform"
             android:format12Hour="EEE, d MMM"
@@ -260,7 +271,8 @@
             android:id="@+id/widget_date_300"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autoSizeMinTextSize="2sp"
+ android:textSize="15sp" 
+            android:autoSizeMinTextSize="5sp"
             android:autoSizeStepGranularity="1sp"
             android:autoSizeTextType="uniform"
             android:format12Hour="EEE, d MMM"
@@ -281,7 +293,8 @@
             android:id="@+id/widget_date_400"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autoSizeMinTextSize="2sp"
+ android:textSize="15sp" 
+            android:autoSizeMinTextSize="5sp"
             android:autoSizeStepGranularity="1sp"
             android:autoSizeTextType="uniform"
             android:format12Hour="EEE, d MMM"
@@ -302,7 +315,8 @@
             android:id="@+id/widget_date_500"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autoSizeMinTextSize="2sp"
+ android:textSize="15sp" 
+            android:autoSizeMinTextSize="5sp"
             android:autoSizeStepGranularity="1sp"
             android:autoSizeTextType="uniform"
             android:format12Hour="EEE, d MMM"
@@ -323,7 +337,8 @@
             android:id="@+id/widget_date_600"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autoSizeMinTextSize="2sp"
+ android:textSize="15sp" 
+            android:autoSizeMinTextSize="5sp"
             android:autoSizeStepGranularity="1sp"
             android:autoSizeTextType="uniform"
             android:format12Hour="EEE, d MMM"
@@ -344,7 +359,8 @@
             android:id="@+id/widget_date_700"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autoSizeMinTextSize="2sp"
+ android:textSize="15sp" 
+            android:autoSizeMinTextSize="5sp"
             android:autoSizeStepGranularity="1sp"
             android:autoSizeTextType="uniform"
             android:format12Hour="EEE, d MMM"
@@ -364,7 +380,8 @@
             android:id="@+id/widget_date_800"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autoSizeMinTextSize="2sp"
+ android:textSize="15sp" 
+            android:autoSizeMinTextSize="5sp"
             android:autoSizeStepGranularity="1sp"
             android:autoSizeTextType="uniform"
             android:format12Hour="EEE, d MMM"
@@ -384,7 +401,8 @@
             android:id="@+id/widget_date_900"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autoSizeMinTextSize="2sp"
+ android:textSize="15sp" 
+            android:autoSizeMinTextSize="5sp"
             android:autoSizeStepGranularity="1sp"
             android:autoSizeTextType="uniform"
             android:format12Hour="EEE, d MMM"
